<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="?attr/backgroundColor"
    tools:context=".Activities.DonateActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDonarSaldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/cardview_default_elevation"
            android:foreground="?selectableItemBackground"
            android:padding="@dimen/cardview_compat_inset_shadow"
            app:cardBackgroundColor="?attr/CardViewColor"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transfer_saldo_msg"
                    android:textAlignment="center"
                    android:textColor="?attr/textColorBlack"
                    android:textSize="@dimen/text_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutCafe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_10"
                    android:hint="@string/cafe_hint"
                    app:boxBackgroundColor="?attr/CardViewColor"
                    app:hintTextColor="?attr/textColorBlack"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView2">

                    <EditText
                        android:id="@+id/editTextCafe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_cafe"
                        android:drawablePadding="@dimen/dimens_5"
                        android:inputType="number|numberDecimal"
                        android:maxLength="2"
                        android:textColor="?attr/textColorBlack" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutClave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_10"
                    android:hint="@string/transferir_saldo_hint"
                    app:boxBackgroundColor="?attr/CardViewColor"
                    app:hintTextColor="?attr/textColorBlack"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayoutCafe">

                    <EditText
                        android:id="@+id/editTextClave"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ic_key"
                        android:drawablePadding="@dimen/dimens_5"
                        android:inputType="number"
                        android:maxLength="4"
                        android:textColor="?attr/textColorBlack" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonDonate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_10"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/donar"
                    android:textColor="@color/colorDialogButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutClave" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDonarBanco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/cardview_default_elevation"
            android:layout_marginTop="@dimen/padding_10"
            android:foreground="?selectableItemBackground"
            app:cardBackgroundColor="?attr/CardViewColor"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewDonarSaldo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <TextView
                    android:id="@+id/textViewDonarBanco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transferir_cuenta_msg"
                    android:textAlignment="center"
                    android:textColor="?attr/textColorBlack"
                    android:textSize="@dimen/text_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewAccountNumber"
                    android:visibility="gone"
                    tools:visibility="visible"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/padding_10"
                    android:text="@string/account_number"
                    android:textColor="?attr/textColorBlack"
                    android:textSize="@dimen/text_20"
                    android:drawableStart="@drawable/ic_credit_card"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDonarBanco" />

                <Button
                    android:id="@+id/buttonCopy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_10"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/copy_account_number"
                    android:textColor="@color/colorDialogButton"
                    android:drawableStart="@drawable/ic_credit_card"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewAccountNumber" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>